--- a/software/autoroom-web/package.json
+++ b/software/autoroom-web/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
+    "@nivo/line": "^0.61.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.19.0",
     "firebase": "^7.14.1",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-native-chart": "^1.0.8-beta",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
